bootstrap 5 integration - dark mode fixes

--- a/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/common/ui-elements.scss
+++ b/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/common/ui-elements.scss
@@ -1,4 +1,4 @@
-.border {
+.border-end {
     @include themify() {
         border: themed($border) !important;
     }
@@ -16,7 +16,7 @@
     }
 }
 
-.border-left {
+.border-start {
     @include themify() {
         border-left: themed($border) !important;
     }
