--- a/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/modal.scss
+++ b/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/modal.scss
@@ -17,19 +17,6 @@ $modalPadding: 24px;
         }
     }
 
-    .close {
-        position: absolute;
-        right: 21px;
-        width: 20px;
-        height: 20px;
-        margin: 0;
-        padding: 0;
-        z-index: 10;
-        color: inherit;
-        opacity: .3;
-        outline: none;
-    }
-
     &-header {
         min-height: 3.5rem;
         padding: 0 1.5rem;
@@ -45,6 +32,7 @@ $modalPadding: 24px;
 
     &-content {
         overflow: hidden;
+        border: 0;
     }
 
     &-body {
